feat: custom description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,10 +10,11 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Carlos Mairena | Infraestructure, programming, hardening and more.." />
+		<meta name="keywords" content="programming, backend, frontend, cibersecurity, monitoring, hardening, tutorials,carlos mairena, costa rica, guanacaste">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
+		<meta name="generator" content="v1.0" />
 		<title>{title}</title>
 	</head>
 	<body>
