--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,45 +7,17 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Carlos Mairena | Infraestructure, programming, hardening and more.." />
-		<meta name="keywords" content="programming, backend, frontend, cibersecurity, monitoring, hardening, tutorials,carlos mairena, costa rica, guanacaste">
+		<meta name="description" content="Carlos Mairena | Infraestructura, programación, ciberseguridad y más.." />
+		<meta name="keywords" content="programación, ciberseguridad, monitoreo, hardening, tutoriales, carlos mairena, costa rica, guanacaste">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content="v1.0" />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="font-sans bg-white text-gray-900">
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
