--- a/src/components/organisms/Header.astro
+++ b/src/components/organisms/Header.astro
@@ -16,7 +16,7 @@ const { currentPath } = Astro.props;
 			<div class="flex-shrink-0">
 				<a href="/" class="flex items-center">
 					<Heading level={3} size="lg" class="text-blue-600">
-						Carlos Mairena
+						Carlos Mairena López
 					</Heading>
 				</a>
 			</div>
