--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const featuredProjects = await getFeaturedProjects();
 							<RemoteImage src={profileImage} 
 								alt="Carlos Mairena López"
 								class="w-full h-full rounded-full bg-gray-200 flex items-center justify-center"
-								loading="lazy"
+								loading="eager"
 							/>
 					</div>
 				</div>
