--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -4,14 +4,11 @@ import Header from '../components/organisms/Header.astro';
 import Heading from '../components/atoms/Heading.astro';
 import Text from '../components/atoms/Text.astro';
 import Card from '../components/molecules/Card.astro';
-import SocialLinks from '../components/molecules/SocialLinks.astro';
 import Button from '../components/atoms/Button.astro';
 import Icon from '../components/atoms/Icon.astro';
 ---
 
-<Layout title="Contacto | Carlos Mairena">
-	<Header currentPath="/contacto" />
-	
+<Layout title="Contacto | Carlos Mairena" currentPath="/contacto">
 	<!-- Hero Section -->
 	<section class="bg-gradient-to-br from-blue-50 to-purple-50 py-16">
 		<div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
