--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -21,7 +21,7 @@ const { posts } = Astro.props;
 const filteredPosts = posts.filter((post: any) => post.frontmatter.tags?.includes(tag));
 ---
 <Layout title={tag} currentPath={tag}>
-    <p>Posts tagged with {tag}</p>
+    <p>Publicaciones etiquetados con {tag}</p>
 
     <ul>
         {filteredPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
