--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,8 +1,10 @@
 ---
+import { getCollection } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
 
-const posts = Object.values(import.meta.glob('../posts/*.md', { eager: true }));
-const tags = [...new Set(posts.map((post: any) => post.frontmatter.tags).flat())];
+const posts =  await getCollection("posts");
+
+const tags = [...new Set(posts.map((post: any) => post.data.tags).flat())];
 
 
 ---
