--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,9 +1,10 @@
 ---
+import { getCollection } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
 
 export async function getStaticPaths() {
 
-    const posts = Object.values(import.meta.glob('../posts/*.md', { eager: true }));
+    const posts =  await getCollection("posts");
 
     return [
         { params: { tag: "astro" }, props: {posts: posts} },
@@ -18,13 +19,13 @@ export async function getStaticPaths() {
 const { tag } = Astro.params;
 const { posts } = Astro.props;
 
-const filteredPosts = posts.filter((post: any) => post.frontmatter.tags?.includes(tag));
+const filteredPosts = posts.filter((post: any) => post.data.tags?.includes(tag));
 ---
 <Layout title={tag} currentPath={tag}>
     <p>Publicaciones etiquetados con {tag}</p>
 
     <ul>
-        {filteredPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
+        {filteredPosts.map((post: any) => <li><a href={post.url}>{post.data.title}</a></li>)}
     </ul>
 
 </Layout>
