--- a/src/layouts/LayoutPost.astro
+++ b/src/layouts/LayoutPost.astro
@@ -2,6 +2,8 @@
 import Footer from '../components/organisms/Footer.astro';
 import Header from '../components/organisms/Header.astro';
 
+import "../styles/global.css";
+
 const { frontmatter, url } = Astro.props;
 ---
 
